objects/Visit_Topic__c.object
<CustomObject>
    <fields>
        <fullName>Business_Category__c</fullName>
        <label>Business Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Category 1</fullName>
                </value>
                <value>
                    <fullName>Business Category 2</fullName>
                </value>
                <value>
                    <fullName>Business Category 3</fullName>
                </value>
                <value>
                    <fullName>Business Category 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Category 1</fullName>
                </value>
                <value>
                    <fullName>Category 2</fullName>
                </value>
                <value>
                    <fullName>Category 3</fullName>
                </value>
                <value>
                    <fullName>Category 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_category__c</fullName>
        <label>Sub category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sub Category 1</fullName>
                </value>
                <value>
                    <fullName>Sub Category 2</fullName>
                </value>
                <value>
                    <fullName>Sub Category 3</fullName>
                </value>
                <value>
                    <fullName>Sub Category 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Business_Category__c</field>
                <operation>equals</operation>
                <valueField>$Source.Business_Category__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Category__c</field>
                <operation>equals</operation>
                <valueField>$Source.Category__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Sub_category__c</field>
                <operation>equals</operation>
                <valueField>Topic__c.Sub_Category__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Topic__c</referenceTo>
        <relationshipLabel>Visit Topics</relationshipLabel>
        <relationshipName>Visit_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Visit Topic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>